@@ -394,6 +394,7 @@ _item_del_pre_hook(Elm_Object_Item *it)
          (sd->stack->last->prev, Elm_Naviframe_Item);
 
    sd->stack = eina_inlist_remove(sd->stack, EINA_INLIST_GET(nit));
+   if (!sd->stack) elm_widget_resize_object_set(WIDGET(it), sd->dummy_edje);
 
    if (top && !sd->on_deletion) /* must raise another one */
      {
@@ -1116,6 +1117,7 @@ _elm_naviframe_smart_add(Evas_Object *obj)
 
    ELM_WIDGET_CLASS(_elm_naviframe_parent_sc)->base.add(obj);
 
+   priv->dummy_edje = ELM_WIDGET_DATA(priv)->resize_obj;
    priv->auto_pushed = EINA_TRUE;
    priv->freeze_events = EINA_TRUE;
 
@@ -1138,6 +1140,8 @@ _elm_naviframe_smart_del(Evas_Object *obj)
      }
 
    sd->on_deletion = EINA_FALSE;
+
+   evas_object_del(sd->dummy_edje);
 
    ELM_WIDGET_CLASS(_elm_naviframe_parent_sc)->base.del(obj);
 }
@@ -1217,6 +1221,7 @@ elm_naviframe_item_push(Evas_Object *obj,
 
    evas_object_show(VIEW(it));
    elm_widget_resize_object_set(obj, VIEW(it));
+   evas_object_smart_member_add(sd->dummy_edje, obj);
 
    if (prev_it)
      {
@@ -1284,6 +1289,7 @@ elm_naviframe_item_insert_before(Evas_Object *obj,
                   title_label, prev_btn, next_btn, content, item_style);
    if (!it) return NULL;
    elm_widget_resize_object_set(obj, VIEW(it));
+   evas_object_smart_member_add(sd->dummy_edje, obj);
 
    sd->stack = eina_inlist_prepend_relative
        (sd->stack, EINA_INLIST_GET(it),
@@ -1313,6 +1319,7 @@ elm_naviframe_item_insert_after(Evas_Object *obj,
                   title_label, prev_btn, next_btn, content, item_style);
    if (!it) return NULL;
    elm_widget_resize_object_set(obj, VIEW(it));
+   evas_object_smart_member_add(sd->dummy_edje, obj);
 
    /* let's share that whole logic, if it goes to the top */
    if (elm_naviframe_top_item_get(obj) == after)
@@ -1356,6 +1363,7 @@ elm_naviframe_item_pop(Evas_Object *obj)
          (sd->stack->last->prev, Elm_Naviframe_Item);
 
    sd->stack = eina_inlist_remove(sd->stack, EINA_INLIST_GET(it));
+   if (!sd->stack) elm_widget_resize_object_set(obj, sd->dummy_edje);
 
    if (prev_it)
      {
@@ -1366,6 +1374,7 @@ elm_naviframe_item_pop(Evas_Object *obj)
           }
 
         elm_widget_resize_object_set(obj, VIEW(prev_it));
+        evas_object_smart_member_add(sd->dummy_edje, obj);
         evas_object_raise(VIEW(prev_it));
 
         //XXX: ACCESS
@@ -1440,6 +1449,7 @@ elm_naviframe_item_promote(Elm_Object_Item *it)
    sd->stack = eina_inlist_demote(sd->stack, EINA_INLIST_GET(nit));
 
    elm_widget_resize_object_set(WIDGET(it), VIEW(nit));
+   evas_object_smart_member_add(sd->dummy_edje, WIDGET(it));
 
    /* this was the previous top one */
    prev_it = EINA_INLIST_CONTAINER_GET
